--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -2,7 +2,7 @@
 
 .contact {
   padding: 20px;
-  max-width: 1399px;
+  width: 100%;
   height: 100%;
   margin: auto;
   display: flex;
@@ -11,6 +11,7 @@
   @include mobile {
     width: 100%;
     padding: 10px;
+    height: auto;
     flex-direction: column;
   }
   .text-container {
@@ -22,7 +23,6 @@
       gap: 10px;
       text-align: center;
       align-items: center;
-      margin: 70px;
     }
     h1 {
       font-size: 100px;
@@ -53,6 +53,7 @@
       z-index: -1;
       @include mobile {
         margin-left: -50px;
+        
       }
     }
     form {
