--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -3,12 +3,13 @@
 .navbar{
 height: 100px;
 .wrapper{
-    max-width: 1399px;
+    width: 90%;
     margin: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 100%;
+   
     @include mobile{
        justify-content: flex-end;
        margin: 0;
