--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -3,18 +3,20 @@
 .portfolio {
   margin: auto;
   width: 100%;
-  height: auto;
+  height: 100%;
   display: flex;
   background: linear-gradient(180deg, #0c0c1d, #191947);
   align-items: center;
   justify-content: center;
- 
+ @include mobile{
+  height: auto;
+ }
  
 
   .container {
     overflow: hidden;
     width: 100%;
-    height: auto;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -23,6 +25,7 @@
     @include mobile {
       gap: 10px; 
       padding: 10px;
+      height: auto;
     }
   
    
@@ -39,14 +42,16 @@
     }
     .work-container {
       width: 100%;
-      height: auto;
+      height: 100%;
       padding: 10px;
       display: flex;
       flex-direction: row;
       gap: 20px;
-      flex-wrap: wrap; 
+     
       @include mobile{
         gap: 20px;
+        height: auto;
+        flex-wrap: wrap; 
         
       }
      
@@ -54,7 +59,7 @@
       .work {
        
         width: 100%;
-        height: auto;
+        height: 100%;
         border-radius: 10px;
         transition: height 0.5s;
         position: relative;
