--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -4,7 +4,7 @@
 height: 100px;
 .wrapper{
     width: 90%;
-    margin: auto;
+    margin: auto 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
