--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -20,7 +20,7 @@
     width: 50%;
     font-size: 16px;
     @include mobile {
-      font-size: 14px;
+      font-size: 14.5px;
       width: 90%;
     }
   }
@@ -66,20 +66,21 @@
     border-radius: 20px;
     @include mobile{
       width: 90%;
-      height: 90%;
+      height: 60%;
     }
 
     .education {
       font-size: 18px;
       @include mobile {
-        font-size: 14px;
+        font-size: 14.5px;
+        
       }
       span {
         color: rebeccapurple;
         font-size: 18.5px;
         letter-spacing: 5px;
         @include mobile {
-          font-size: 14.5px;
+          font-size: 15px;
         }
       }
     }
@@ -89,7 +90,8 @@
       gap: 20px;
       @include mobile {
         flex-wrap: wrap;
-        padding: 10px;
+        padding: 20px;
+        margin-left: 20px;
       }
       .image-container {
         display: flex;
@@ -101,7 +103,7 @@
         p {
           font-size: 18px;
           @include mobile {
-            font-size: 14px;
+            font-size: 14.5px;
           }
         }
         img {
