--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -39,7 +39,7 @@
       width: 10rem;
       font-weight: 500;
       padding: 20px;
-      border: 2px soid white;
+      border: 1px solid grey;
       background: transparent;
       border-radius: 10px;
       color: black;
