--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -72,10 +72,10 @@
        
       }
       .project1 {
-        background: url("https://i.pinimg.com/736x/a9/e1/2d/a9e12dfa038e12b2e46675b9e7923007.jpg"),
+        background: url("https://img.freepik.com/premium-vector/food-delivery-service-fast-food-delivery-scooter-delivery-service-illustration_67394-869.jpg?semt=ais_hybrid"),
           linear-gradient(#ffffff, #b3c271);
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: contain;
         background-blend-mode: multiply;
         background-position-x: center;
         background-position-y: center;
